# qq-email

./: CLAUDE.md  README.md  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/extensions/Disable-CSP/: manifest.json  service-worker-loader.js
src-tauri/extensions/Disable-CSP/assets/: background.ts-8a9cb6ef.js  storage-52c56912.js
src-tauri/icons/: icon.icns
src-tauri/injected/: darkreader.js  deeplink.js  link-handler.js  nanoid.js  notify.js  titlebar.js  tray.js
src-tauri/plugins/qqmail-plugin/: Cargo.toml  build.rs
src-tauri/plugins/qqmail-plugin/permissions/autogenerated/: reference.md
src-tauri/plugins/qqmail-plugin/permissions/autogenerated/commands/: is_email_client_registered.toml  notification.toml  register_email_client.toml
src-tauri/plugins/qqmail-plugin/permissions/schemas/: schema.json
src-tauri/plugins/qqmail-plugin/src/: email_client_registry.rs  lib.rs
src-tauri/src/: lib.rs  main.rs
