[package]
name = "qq-email"
version = "0.2.0"
edition = "2024"

[lib]
name = "qq_email_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
base64 = "0.22"
serde_json = "1"
qqmail = { path = "./plugins/qqmail-plugin" }
tauri-plugin-log = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-clipboard-manager = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-window-state = "2"
