[package]
name = "qqmail"
version = "0.1.0"
edition = "2024"
links = "qqmail"

[lib]
crate-type = ["lib"]

[dependencies]
tauri = { version = "2" }
tauri-winrt-notification = "0.7.2"
url = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
